-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
There are a few regressions introduced in the bash completions for lctl and lfs.
1. Attempting completion for lctl prints a message to stderr and does not generate any completions. To test this behavior interactively, type lctl <tab>. To test this behavior programmatically, run
source lustre/scripts/bash-completion/lustre; COMPLETIONS=$( _lustre_cmds lctl) && [ ! -z "$COMPLETIONS" ]
An exit status of 1 indicates the bug is present.
2. Completion for lfs check gives incorrect results.
3. Attempting completion for lfs find -component-flags erroneously prints a message to stderr.
- is related to
-
LU-19952 'lfs mirror', 'lctl/lfs pcc', 'lctl nodemap' tab completion broken
-
- Open
-
-
LU-9830 string truncation from snprintf in libcfs/util/parser.c::Parser_list_commands()
-
- Resolved
-
- is related to
-
LU-5170 lfs usability
-
- Open
-
-
LU-8621 Parser_execarg() prints help to stderr, usage to stdout
-
- Resolved
-
-
LU-13225 add bash completion for lfs
-
- Resolved
-
-
LU-12734 bash completion (for now: lctl set/get_param)
-
- Resolved
-
-
LU-930 Update or improvement to a Lustre man page, documentation, or messages
-
- Open
-